--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,8 +1,20 @@
 <div class="container">
-  <div class="up arrow-child"><mat-icon>keyboard_arrow_up</mat-icon></div>
-  <div class="left arrow-child"><mat-icon>keyboard_arrow_left</mat-icon></div>
-  <div class="right arrow-child"><mat-icon>keyboard_arrow_right</mat-icon></div>
-  <div class="down arrow-child"><mat-icon>keyboard_arrow_down</mat-icon></div>
+  <div class="up arrow-child">
+    <mat-icon>keyboard_arrow_up</mat-icon>
+    <span>Technology</span>
+  </div>
+  <div class="left arrow-child">
+    <mat-icon>keyboard_arrow_left</mat-icon>
+    <span>About</span>
+  </div>
+  <div class="right arrow-child">
+    <span>Contact</span>
+    <mat-icon>keyboard_arrow_right</mat-icon>
+  </div>
+  <div class="down arrow-child">
+    <span>Solution</span>
+    <mat-icon>keyboard_arrow_down</mat-icon>
+  </div>
   <div class="content">
     <ng-content />
   </div>
